# cookiecutter-template-agent

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  README.md  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json
{{ cookiecutter.project_slug }}/config/: config.dev.toml
{{ cookiecutter.project_slug }}/docs/: api.md  contributing.md  overview.md  user_guide.md
{{ cookiecutter.project_slug }}/docs/arch/: README.md
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: logger.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/core/: config.py  logger.py  main.py
{{ cookiecutter.project_slug }}/tests/: docker-compose.yml
