[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "langchain-openai>=1.1.7",
  "python-dotenv>=1.2.1",
  "uvicorn[standard]",
  "jupyterlab"
]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.uv.scripts]
test = "pytest"